--- a/Password Validate/Password Validate.csproj
+++ b/Password Validate/Password Validate.csproj
@@ -8,4 +8,11 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Hash\Hash.csproj" />
+      <ProjectReference Include="..\Interface\Interface.csproj" />
+      <ProjectReference Include="..\Models\Models.csproj" />
+      <ProjectReference Include="..\Validation\Validation.csproj" />
+    </ItemGroup>
+
 </Project>
